--- a/themes/Newspaper/style.css
+++ b/themes/Newspaper/style.css
@@ -29432,9 +29432,27 @@ p {
   background-position: center center;
   background-color: #1e1641;
 }
-.section-cna-vivo .container-tv-vivo .container-reproductor {
-  padding-left: 0;
-  padding-right: 0;
+@media (max-width: 1018px) {
+  .section-cna-vivo .container-tv-vivo {
+    padding-top: 20px;
+    padding-bottom: 0px;
+  }
+}
+@media (max-width: 1018px) {
+  .section-cna-vivo .container-tv-vivo .wpb_column:not(.container-reproductor) {
+    display: none;
+  }
+}
+@media (min-width: 1019px) {
+  .section-cna-vivo .container-tv-vivo .container-reproductor {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media (max-width: 1018px) {
+  .section-cna-vivo .container-tv-vivo .container-reproductor {
+    width: 100% !important;
+  }
 }
 .section-cna-vivo .container-tv-vivo [class*="banner-tv"] {
   text-align: center;
